--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
         <h1>Hi! My name is Sarah Lin</h1>
         <p>I want boba really badly</p>
         <img src="boba.png">
+
+        <ul>
+            <li>C++, Java, Python Programmer</li>
+            <li>Pianist, Flutist, Musician of 10 Years</li>
+            <li>Skiier, Gym Rat, Artist</li>
+        </ul>
     </body>
 </html>
