--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Hi! My name is Sarah Lin</h1>
-        <p>I want boba really badly</p>
-        <img src="boba.png">
-
+        <h1>Sarah Lin</h1>
         <ul>
             <li>C++, Java, Python Programmer</li>
             <li>Pianist, Flutist, Musician of 10 Years</li>
             <li>Skiier, Gym Rat, Artist</li>
         </ul>
+        <h2>COMPUTER PROGRAMMING</h2>
+        <h3>Github</h3>
+        <a href="https://github.com/salad608"></a>
+        <h2>MUSICIANSHIP<h2>
+        <h3>YouTube</h3>
+        <a href="https://www.youtube.com/@salad608"></a>
+        <p>Jazz gigs</p>
+        <p>All-Southern Honor Musician 2025</p>
     </body>
 </html>
