--- a/index.html
+++ b/index.html
@@ -13,13 +13,39 @@
             <li>Pianist, Flutist, Musician of 10 Years</li>
             <li>Skiier, Gym Rat, Artist</li>
         </ul>
+        <a href="https://www.linkedin.com/in/sarah-lin-ba9a13381/">LinkedIn</a>
+
+
         <h2>COMPUTER PROGRAMMING</h2>
-        <h3>Github</h3>
-        <a href="https://github.com/salad608"></a>
+        <a href="https://github.com/salad608">GitHub</a>
+        <a href="https://codeforces.com/profile/MasterCheetah608">CodeForces</a>
+        <a href="https://www.hackerrank.com/profile/salad608">Hackerrank</a>
+        <p>Hack Club Member: Eastvale Innovators</p>
+        <p>Hearts in Orbit Research Team Leader</p>
+
+
         <h2>MUSICIANSHIP<h2>
-        <h3>YouTube</h3>
-        <a href="https://www.youtube.com/@salad608"></a>
-        <p>Jazz gigs</p>
-        <p>All-Southern Honor Musician 2025</p>
+        <a href="https://www.youtube.com/@salad608">YouTube</a>
+
+        <h3>Covers</h3>
+        <a href="https://youtu.be/JNA1TlZnkCA">
+なきそ NAKISO - 化けの花 Bake no Hana Cover (Arr. for Piano & Vocals)</a>
+        <a href="https://youtu.be/ZbM_bDyRC_I">
+Cover of From the Start by Laufey - Arranged by Sarah Lin for Piano, Flute, & Vocals</a>
+        <a href="https://flat.io/@salad608/published">Musical Compositions</a>
+        
+        <h3>Accolades and Occupations</h3>
+        <ul>
+            <li>Pianist, Flutist, Musician of 10 Years</li>
+            <li>Jazz Piano Teacher, Available for gigs (big band/combo)</li>
+            <li>Participated in The Groove Room and Armand Blais Orchestra</li>
+            <li>2025-2026: SCSBOA All-Southern Honor Band Musician, Jazz Ambassadors, Piano</li>
+            <li>Received a 5 on the AP Music Theory Exam, with an Aural Subscore of 5 and a non-Aural Subscore of 5</li>
+            <li>2023, 2024, 2025: RCC Concert Honor Band</li>
+            <li>2023, 2024: RCC Jazz Honor Band</li>
+            <li>2023, 2024: Oustanding Soloist/Outstanding Musicianship</li>
+            <li>2023-2024: ERHS Bands Outstanding Freshman Musician</li>
+            <li>2023, 2024: ERHS Bands MVP Award</li>
+        </ul>
     </body>
 </html>
